force-app/main/default/objects/Inventory_Transfer_Order__c/fields/Destination_Location__c.field-meta.xml
<CustomField>
    <fullName>Destination_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Destination Location</label>
    <referenceTo>AcctSeedERP__Location__c</referenceTo>
    <relationshipLabel>Transfer Orders (This Destination)</relationshipLabel>
    <relationshipName>Inventory_Transfer_Orders_dest</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>