force-app/main/default/objects/Inventory_Transfer_Order__c/fields/Destination_Warehouse1__c.field-meta.xml
<CustomField>
    <fullName>Destination_Warehouse1__c</fullName>
    <formula>Destination_Location__r.AcctSeedERP__Warehouse__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Warehouse</label>
    <type>Text</type>
</CustomField>