force-app/main/default/objects/Inventory_Transfer_Order__c/fields/Origin_Location__c.field-meta.xml
<CustomField>
    <fullName>Origin_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Origin Location</label>
    <referenceTo>AcctSeedERP__Location__c</referenceTo>
    <relationshipLabel>Inventory Transfer Orders (This Origin)</relationshipLabel>
    <relationshipName>Inventory_Transfer_Orders_orig</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>