force-app/main/default/objects/Inventory_Transfer_Order__c/fields/Origin_Warehouse1__c.field-meta.xml
<CustomField>
    <fullName>Origin_Warehouse1__c</fullName>
    <formula>Origin_Location__r.AcctSeedERP__Warehouse__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Warehouse</label>
    <type>Text</type>
</CustomField>