force-app/main/default/objects/Inventory_Transfer_Order__c/fields/Tagger__c.field-meta.xml
<CustomField>
    <fullName>Tagger__c</fullName>
    <label>Tagger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rosa</fullName>
            </value>
            <value>
                <fullName>Leisla</fullName>
            </value>
            <value>
                <fullName>Rosalinda</fullName>
            </value>
            <value>
                <fullName>Crystal</fullName>
            </value>
            <value>
                <fullName>Romailys</fullName>
            </value>
            <value>
                <fullName>Maddison</fullName>
            </value>
            <value>
                <fullName>Elizabeth</fullName>
            </value>
            <value>
                <fullName>Fransheska</fullName>
            </value>
            <value>
                <fullName>Maria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>