force-app/main/default/objects/Inventory_Transfer_Order__c/fields/Total_Box_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Box_Count__c</fullName>
    <label>Total Box Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>