force-app/main/default/objects/Inventory_Transfer_Order__c/fields/Total_Items_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Total_Items_Transferred__c</fullName>
    <description>Rollup of quantity of items transferred in transfer order</description>
    <label>Total Items Transferred</label>
    <summarizedField>Inventory_Transfer_Order_Line__c.Quantity_Sent__c</summarizedField>
    <summaryForeignKey>Inventory_Transfer_Order_Line__c.Inventory_Transfer_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>