force-app/main/default/objects/Inventory_Transfer_Order__c/listViews/All_Transfer_Orders.listView-meta.xml
<ListView>
    <fullName>All_Transfer_Orders</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Transfer Orders</label>
</ListView>