force-app/main/default/objects/Inventory_Transfer_Order__c/listViews/Aux_to_Main_Transfers_ALL.listView-meta.xml
<ListView>
    <fullName>Aux_to_Main_Transfers_ALL</fullName>
    <columns>NAME</columns>
    <columns>Tagger__c</columns>
    <columns>Total_Items_Transferred__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Origin_Location__c</field>
        <operation>contains</operation>
        <value>2B. Finished Goods</value>
    </filters>
    <filters>
        <field>Destination_Location__c</field>
        <operation>contains</operation>
        <value>1B. Finished Goods</value>
    </filters>
    <label>Aux to Main Transfers - ALL</label>
</ListView>